--- a/ARBeauty/Base.lproj/Main.storyboard
+++ b/ARBeauty/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Gwn-e1-110">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -16,23 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6X-TF-80I">
-                                <rect key="frame" x="10" y="144" width="394" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="3ti-Gm-uPz"/>
-                                </constraints>
-                                <attributedString key="attributedText">
-                                    <fragment content="ARBEAUTY">
-                                        <attributes>
-                                            <font key="NSFont" size="36" name="Courier-Oblique"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Y3b-BG-bJt">
-                                <rect key="frame" x="100" y="334" width="214" height="300"/>
+                                <rect key="frame" x="100" y="364" width="214" height="300"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B0Q-6e-dAW" customClass="ARButton" customModule="ARBeauty" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="214" height="86.5"/>
@@ -51,24 +36,30 @@
                                     <constraint firstAttribute="height" constant="300" id="p0i-cR-H3x"/>
                                 </constraints>
                             </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arbeauty_logo" translatesAutoresizingMaskIntoConstraints="NO" id="yF9-1A-gDm">
+                                <rect key="frame" x="0.0" y="144" width="414" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="Sd0-KB-zGr"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.99215686274509807" green="0.81176470588235294" blue="0.87450980392156863" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="Y3b-BG-bJt" firstAttribute="top" secondItem="p6X-TF-80I" secondAttribute="bottom" constant="150" id="FGu-Rf-k4K"/>
-                            <constraint firstItem="p6X-TF-80I" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="ONA-MB-gWO"/>
+                            <constraint firstItem="Y3b-BG-bJt" firstAttribute="top" secondItem="yF9-1A-gDm" secondAttribute="bottom" constant="90" id="EQK-RU-cmW"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Y3b-BG-bJt" secondAttribute="trailing" constant="100" id="U54-pO-y0O"/>
                             <constraint firstItem="Y3b-BG-bJt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="WCR-kl-w6w"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p6X-TF-80I" secondAttribute="trailing" constant="10" id="jgD-9X-g94"/>
-                            <constraint firstItem="p6X-TF-80I" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="ueX-Rl-owH"/>
+                            <constraint firstItem="yF9-1A-gDm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="o2V-V7-21r"/>
+                            <constraint firstItem="yF9-1A-gDm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xu2-ee-wDV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yF9-1A-gDm" secondAttribute="trailing" id="zch-D6-bNG"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="buttonStackView" destination="Y3b-BG-bJt" id="Tvm-UI-dEy"/>
                         <outlet property="galleryButton" destination="kM3-wE-Vam" id="HlV-8y-EwR"/>
                         <outlet property="lipsButton" destination="pCm-FD-xvC" id="8vk-P7-xJv"/>
+                        <outlet property="logoImageView" destination="yF9-1A-gDm" id="h9t-t2-P47"/>
                         <outlet property="nailsButton" destination="B0Q-6e-dAW" id="4Y5-Ak-w1Y"/>
-                        <outlet property="nameLabel" destination="p6X-TF-80I" id="RsC-QH-Yyd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -107,6 +98,7 @@
     </scenes>
     <resources>
         <image name="alexander-popov-et_YVbywv80-unsplash" width="3000" height="2000"/>
+        <image name="arbeauty_logo" width="216" height="80"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
