--- a/ARBeauty/Base.lproj/Main.storyboard
+++ b/ARBeauty/Base.lproj/Main.storyboard
@@ -66,6 +66,21 @@
             </objects>
             <point key="canvasLocation" x="95.652173913043484" y="93.75"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Azv-PB-glW">
+            <objects>
+                <viewController id="XyS-53-sUf" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jjD-kz-320">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Gss-gZ-lWg"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xLR-Md-NVy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="99" y="864"/>
+        </scene>
         <!--Test Pick Color View Controller-->
         <scene sceneID="sMQ-cs-dei">
             <objects>
